test/errors/value/list/__set.yasl
const x = [ .a, .b, .c ]

x[3] = .d
